[gd_scene load_steps=16 format=1]

[ext_resource path="res://scene/ui.gd" type="Script" id=1]
[ext_resource path="res://image/logo.png" type="Texture" id=2]
[ext_resource path="res://image/menu.png" type="Texture" id=3]
[ext_resource path="res://font/463dbbe9b41acf3e13c81c645f024bd8.png" type="Texture" id=4]
[ext_resource path="res://image/sound.png" type="Texture" id=5]
[ext_resource path="res://image/popup1.png" type="Texture" id=6]
[ext_resource path="res://image/contro.png" type="Texture" id=7]
[ext_resource path="res://image/level.png" type="Texture" id=8]
[ext_resource path="res://image/back.png" type="Texture" id=9]
[ext_resource path="res://scene/ScrollContainer.gd" type="Script" id=10]
[ext_resource path="res://scene/level1.gd" type="Script" id=11]
[ext_resource path="res://image/player.png" type="Texture" id=12]
[ext_resource path="res://image/starcolor.png" type="Texture" id=13]
[ext_resource path="res://image/icons8-lock-filled-50.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]

resource/name = "New Anim"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Button:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -50, 3 ), Vector2( 6, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button2:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 227, 3 ), Vector2( 172, 3 ) ]
}

[node name="ui" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Control" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Sprite" type="Sprite" parent="Control"]

editor/display_folded = true
transform/pos = Vector2( 110, -120 )
transform/scale = Vector2( 0.6, 0.6 )

[node name="logo" type="Sprite" parent="Control/Sprite"]

transform/pos = Vector2( 10, 350 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Control"]

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 334.0
margin/right = 44.0
margin/bottom = 374.0
alignment = 0

[node name="Button" type="TouchScreenButton" parent="Control/HBoxContainer"]

transform/pos = Vector2( 6, 3 )
transform/scale = Vector2( 0.42, 0.4 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Button3" type="TouchScreenButton" parent="Control/HBoxContainer"]

transform/pos = Vector2( 36, -64 )
transform/scale = Vector2( 0.35, 0.35 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Button2" type="TouchScreenButton" parent="Control/HBoxContainer"]

transform/pos = Vector2( 172, 3 )
transform/scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/HBoxContainer"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="menuin" type="Control" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Sprite" type="Sprite" parent="menuin"]

transform/pos = Vector2( 112.5, 162 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="menuin"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
alignment = 0

[node name="Label2" type="TouchScreenButton" parent="menuin/VBoxContainer"]

transform/pos = Vector2( 60, 190 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 7 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Label" type="TouchScreenButton" parent="menuin/VBoxContainer"]

transform/pos = Vector2( 60, 160 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 8 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="backmain" type="TouchScreenButton" parent="menuin/VBoxContainer"]

transform/pos = Vector2( 97, 300 )
transform/scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 9 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="LinkButton" type="LinkButton" parent="menuin"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 270.0
margin/right = 167.0
margin/bottom = 284.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Privacy Policy"

[node name="controlinfo" type="Node2D" parent="."]

visibility/visible = false

[node name="Sprite1" type="Sprite" parent="controlinfo"]

transform/pos = Vector2( 112.5, 162 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Label3" type="Label" parent="controlinfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="back " type="TouchScreenButton" parent="controlinfo"]

transform/pos = Vector2( 97, 300 )
transform/scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 9 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Popup2" type="Control" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Sprite2" type="Sprite" parent="Popup2"]

transform/pos = Vector2( 112, 162 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="ScrollContainer" type="ScrollContainer" parent="Popup2"]

rect/min_size = Vector2( 0, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 46.0
margin/top = 161.0
margin/right = 186.0
margin/bottom = 261.0
scroll/horizontal = true
scroll/vertical = true
scroll/deadzone = 0
script/script = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="Popup2/ScrollContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Popup2/ScrollContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="level0" type="Node2D" parent="Popup2/ScrollContainer/VBoxContainer/HBoxContainer"]

script/script = ExtResource( 11 )

[node name="Sprite" type="TouchScreenButton" parent="Popup2/ScrollContainer/VBoxContainer/HBoxContainer/level0"]

transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 12 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Label" type="Label" parent="Popup2/ScrollContainer/VBoxContainer/HBoxContainer/level0"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 11.0
margin/top = 28.0
margin/right = 51.0
margin/bottom = 42.0
custom_colors/font_color = Color( 0.0078125, 0.00765991, 0.00765991, 1 )
text = "1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Container" type="Container" parent="Popup2/ScrollContainer/VBoxContainer/HBoxContainer/level0"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 0.0
margin/right = 41.0
margin/bottom = 40.0

[node name="star1" type="Container" parent="Popup2/ScrollContainer/VBoxContainer/HBoxContainer/level0/Container"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -32.0
margin/top = -31.0
margin/right = 8.0
margin/bottom = 9.0

[node name="Sprite2" type="Sprite" parent="Popup2/ScrollContainer/VBoxContainer/HBoxContainer/level0/Container/star1"]

transform/pos = Vector2( 38, 53 )
transform/scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 13 )

[node name="star3" type="Container" parent="Popup2/ScrollContainer/VBoxContainer/HBoxContainer/level0/Container"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Sprite24" type="Sprite" parent="Popup2/ScrollContainer/VBoxContainer/HBoxContainer/level0/Container/star3"]

transform/pos = Vector2( 17, 22 )
transform/scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 13 )

[node name="star2" type="Container" parent="Popup2/ScrollContainer/VBoxContainer/HBoxContainer/level0/Container"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Sprite2" type="Sprite" parent="Popup2/ScrollContainer/VBoxContainer/HBoxContainer/level0/Container/star2"]

transform/pos = Vector2( 12, 20 )
transform/scale = Vector2( 0.15, 0.15 )
z/z = 2
texture = ExtResource( 13 )

[node name="Sprite 2" type="Sprite" parent="Popup2/ScrollContainer/VBoxContainer/HBoxContainer/level0"]

transform/pos = Vector2( 13, 12 )
transform/scale = Vector2( 0.5, 0.5 )
z/z = 5
texture = ExtResource( 14 )

[node name="backmenu" type="TouchScreenButton" parent="Popup2"]

transform/pos = Vector2( 97, 300 )
transform/scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 9 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[connection signal="pressed" from="Control/HBoxContainer/Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Control/HBoxContainer/Button3" to="." method="_on_Button3_pressed"]

[connection signal="pressed" from="Control/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]

[connection signal="pressed" from="menuin/VBoxContainer/Label2" to="." method="_on_Label2_pressed"]

[connection signal="pressed" from="menuin/VBoxContainer/Label" to="." method="_on_Label_pressed"]

[connection signal="pressed" from="menuin/VBoxContainer/backmain" to="." method="_on_backmain_pressed"]

[connection signal="pressed" from="menuin/LinkButton" to="." method="_on_LinkButton_pressed"]

[connection signal="pressed" from="controlinfo/back " to="." method="_on_back_pressed"]

[connection signal="pressed" from="Popup2/ScrollContainer/VBoxContainer/HBoxContainer/level0/Sprite" to="Popup2/ScrollContainer/VBoxContainer/HBoxContainer/level0" method="_on_Sprite_pressed"]

[connection signal="pressed" from="Popup2/backmenu" to="." method="_on_backmenu_pressed"]


